# 4d_1pn_sim

./: AGENTS.md  CODEX_FIRST_PROMPT.md  CODEX_HANDOFF_PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: 4d_1pn_bridge_summary.md  4d_1pn_full_summary.md  4d_em_fields_summary.md  4d_plasma_summary.md  4d_summary.md  analysis_pipeline.md  exp02_audit_matrix.md  exp03_newtonian_status_memo.md  newtonian_to_1pn_program.md  results_journal.md  run_matrix.md
reference/: symbolic_targets.json
scripts/: run_exp01_prefilled_bath_control_320_boundary_relaxation.sh  run_exp01_prefilled_bath_control_320_operator_screen.sh  run_exp01_prefilled_bath_source_320_boundary_relaxation.sh  run_exp01_prefilled_bath_source_ramped_320_boundary_relaxation.sh  run_exp01_prefilled_bath_source_relaxed_320_boundary_relaxation.sh  run_exp01_prefilled_bath_source_relaxed_320_compactness_screen.sh  run_exp01_prefilled_bath_source_relaxed_320_refill_screen.sh  run_exp01_prefilled_bath_source_relaxed_320_trap_screen.sh  run_exp01_single_heavy_source_inflow_320_boundary_relaxation_conditioned_long.sh  run_exp01_single_heavy_source_inflow_320_boundary_reservoir_cuda.sh  run_exp01_single_heavy_source_inflow_320_boundary_screen.sh  run_exp01_single_heavy_source_inflow_320_boundary_shell_refine.sh  run_exp01_single_heavy_source_inflow_320_boundary_shell_screen.sh  run_exp01_single_heavy_source_inflow_320_conditioned_long.sh  run_exp01_single_heavy_source_inflow_320_cuda.sh  run_exp02_shortarc_256_restart.sh  run_exp03_newtonian_bound_orbit_256_cuda.sh  (+13 more)
src/: __init__.py
src/core/: __init__.py  (+8 more)
(+139 files in other folders)
