[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim4d-1pn"
version = "0.1.0"
description = "Sprint 1 PyTorch scaffold for the 4D toy-model simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pytest",
  "PyYAML",
  "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
